# cpp-gui-template-sdl2-opengl

./: .gitignore  CMakeLists.txt
cmake/: StaticAnalyzers.cmake
src/app/: CMakeLists.txt
src/app/App/: Main.cpp
src/core/: CMakeLists.txt
